prevent name wrapping

--- a/src/components/PluginSettings/contributorModal.css
+++ b/src/components/PluginSettings/contributorModal.css
@@ -17,6 +17,7 @@
     font-size: 20px;
     height: 36px;
     position: relative;
+    white-space: nowrap;
 }
 
 .vc-author-modal-name::before {
